# A2Z-Core

./: .dockerignore  .env.example  .gitignore  A2Z_Core_Design_TestPlan.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  aws_resources.py  config.py  dependencies.py  main.py
app/core/: __init__.py  _ddb.py  audit.py  auth.py  clients.py  email.py  events.py  exceptions.py  logging.py  membership.py  rate_limit.py  realtime.py  secrets.py  settings.py  storage.py
app/lambdas/: cognito_post_confirm.py  omnichannel_ses_inbound.py  omnichannel_sms_webhook.py  omnichannel_whatsapp_webhook.py  ses_notifications.py
app/routers/: core_admin.py  health.py  invoicing.py  omnichannel.py
app/services/invoicing/: CLAUDE.md  access.py  alembic.ini  db.py  domain.py  email_templates.py  exceptions.py  handlers.py  models.py  pdf.py  schemas.py  service.py  state_machine.py
app/services/invoicing/migrations/: env.py
app/services/invoicing/migrations/versions/: 0001_baseline_schema.py
app/services/omnichannel/: CLAUDE.md  access.py  aws_resources.py  connections.py  db.py  exceptions.py  handlers.py  inbox.py  media.py  metrics.py  models.py  presence.py  queues.py  routing.py  stream.py  webhooks.py  worker.py
app/services/omnichannel/adapters/: _meta.py  base.py  email.py  instagram.py  messenger.py  registry.py  sms.py  types.py  whatsapp.py
app/services/omnichannel/migrations/: env.py
app/services/omnichannel/migrations/versions/: 0001_baseline_schema.py  0001_initial_schema.py  0002_inbox_index_desc_nulls_last.py  0003_message_client_dedup_key.py
app/services/omnichannel/webhooks/: ses_inbound.py  sms_webhook.py  whatsapp_webhook.py
docs/: INDEX.md  README.md  api-reference.md  ci-cd.md  configuration.md  cost-notes.md  events.md  migrations.md  omnichannel-decisions.md  phase2-invoicing.md  potential-additions.md  retention.md  scripts.md  testing.md  zero-trust.md
docs/architecture/: auth-and-authorization.md  data-flow.md  deployment.md  event-driven-architecture.md  microservices-distribution.md  overview.md  request-lifecycle.md  zero-trust.md
docs/core/: README.md  audit.md  auth.md  email.md  events-module.md  membership.md  rate-limit.md  realtime.md  secrets.md  settings.md  shared-infrastructure.md  storage.md
docs/services/invoicing/: README.md  api-reference.md
docs/services/omnichannel/: README.md  adapters.md  api-reference.md  data-model.md  known-issues.md  message-flow.md  routing-and-realtime.md
infra/: README.md  terragrunt.hcl
infra/live/prod/cognito/: terragrunt.hcl
infra/live/prod/dynamodb/: terragrunt.hcl
infra/live/prod/ecs/: terragrunt.hcl
infra/live/prod/eventbridge/: terragrunt.hcl
infra/live/prod/iam/: terragrunt.hcl
infra/live/prod/rds/: terragrunt.hcl
infra/live/prod/redis/: terragrunt.hcl
infra/live/prod/s3/: terragrunt.hcl
infra/live/prod/ses/: terragrunt.hcl
infra/live/prod/sqs-omnichannel/: terragrunt.hcl
infra/live/prod/vpc/: terragrunt.hcl
infra/migrations/: 2026-06-18_example_backfill_schema_version.py
infra/modules/cognito/: main.tf
infra/modules/dynamodb/: main.tf
infra/modules/ecs/: main.tf
infra/modules/eventbridge/: main.tf
infra/modules/iam/: main.tf
infra/modules/rds/: main.tf
infra/modules/redis/: main.tf
infra/modules/s3/: main.tf
infra/modules/ses/: main.tf
infra/modules/sqs-omnichannel/: main.tf
infra/modules/vpc/: main.tf
scripts/: __init__.py  build_lambda.sh  check_docs.py  create_local_resources.py
tests/: conftest.py
tests/integration/: test_api.py  test_audit.py  test_email.py  test_lambdas.py  test_membership.py  test_migration.py  test_provisioning.py  test_realtime.py  test_secrets.py  test_settings.py  test_storage.py
tests/integration/invoicing/: conftest.py  test_handlers.py  test_lifecycle.py  test_router_http.py  test_service.py
tests/integration/omnichannel/: conftest.py  test_connections.py  test_dlq.py  test_inbox.py  test_media.py  test_message_flow.py  test_models.py  test_presence.py  test_router_http.py  test_routing.py  test_schema.py  test_send_reply.py  test_stream.py
tests/load/: test_load.py
tests/load/omnichannel/: conftest.py  test_load.py
tests/unit/: test_auth.py  test_auth_cognito.py  test_events.py  test_openapi.py  test_rate_limit.py  test_realtime.py  test_secrets.py
tests/unit/invoicing/: test_domain.py  test_email_templates.py  test_pdf.py  test_state_machine.py
tests/unit/omnichannel/: test_email_adapter.py  test_instagram_adapter.py  test_messenger_adapter.py  test_meta_base.py  test_metrics.py  test_registry.py  test_sms_adapter.py  test_webhook_entrypoints.py  test_whatsapp_adapter.py
