[project]
name = "a2z-core"
version = "0.1.0"
description = "A2Z Core — shared infrastructure layer (auth, membership, email, storage, audit, settings, events, rate limiting) for all A2Z services."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "boto3>=1.34",
    "redis>=5.0",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "moto[dynamodb,s3,ses,sns,events,secretsmanager,sqs]>=5.0",
    "fakeredis>=2.21",
    "ruff>=0.4",
    "mypy>=1.9",
    "boto3-stubs[dynamodb,s3,ses,sns,events,secretsmanager,sqs]>=1.34",
    "types-redis>=4.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# packages = ["app"] alone would ship only the top-level package and silently
# drop app.core / app.lambdas / app.routers from wheels and --target installs.
[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: isort, B: bugbear, UP: pyupgrade, ASYNC: async pitfalls
select = ["E", "F", "I", "B", "UP", "ASYNC"]
# Keep the design doc's idioms: `class X(str, Enum)` (UP042) and `timezone.utc`
# (UP017). Both are explicit in A2Z_Core_Design_TestPlan.md §2.
ignore = ["UP042", "UP017"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
# boto3 is dynamically typed; we lean on boto3-stubs but allow untyped where needed.
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["jose.*", "moto.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "load: load/latency tests (deselect with '-m \"not load\"')",
    "integration: tests that hit LocalStack/moto",
]
addopts = "-ra"

[tool.coverage.run]
source = ["app/core"]
branch = true
